# posetrack

./: .gitignore  CLAUDE.md  README.md  __init__.py  environment.yaml  fmc_cs_parse.py  libwalk.py  pose_detector.py  process_synced_poses.py  pyproject.toml  test.py  test_debug_functions.py  test_foot.py  test_verify.py
output/caliscope/coord_3x1_3/: output_3d_poses_tracked.csv  output_3d_poses_tracked.pkl
output/caliscope/coordmatrix/: output_3d_poses_tracked.csv  output_3d_poses_tracked.pkl
output/caliscope/recording_3by1/: output_3d_poses_tracked.csv  output_3d_poses_tracked.pkl
output/caliscope/recording_balance_stage1_v2/: output_3d_poses_tracked.csv  output_3d_poses_tracked.pkl
src/: cs_parse.py  pose_detector.py  process_synced_poses.py  sp_parse.py  test.py
src/posetrack/: __init__.py  compare_posetrack.py  libwalk.py  process_synced_poses.py
test/: test.py  test_cs_parse.py  test_estimate_poses.py  test_fmc_recording_calibration.toml  test_foot.py  test_mwc_video.py  test_verify.py
test/calibration/: snapshot_camera_params_fmc.pkl  test_mwc_config.toml
test/caliscope/: frame_time_history.csv
test/caliscope/coordmatrix/: config.toml  frame_time_history.csv  notes.txt
test/caliscope/recording_3by1/: frame_time_history.csv
tests/: test_cs_parse.py  test_estimate_poses.py  test_process_synced_mwc_frames.py
tests/calibration/: snapshot_camera_params_mwc.pkl
tests/caliscope/: recording_balance_nurse_v1_person0.csv  recording_balance_nurse_v1_person1.csv  recording_balance_nurse_v1_person1.pkl
tests/image/: keypoints_1.pkl  keypoints_many.pkl
(+46 files in other folders)
