[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posetrack"
version = "0.1.0"
description = "post-hoc 3D pose estimation and tracking"
readme = "README.md"
requires-python = ">=3.10"
authors = [
   {name = "Jeremy Wong", email = "wong.jeremy.d@gmail.com"},
]
dependencies = []  # empty - conda handles all deps

[project.optional-dependencies]
dev = [
   "pytest>=7.0.0",
   "pytest-cov>=4.0.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/posetrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
   "--cov=src/posetrack",
   "--cov-report=html:testoutput/htmlcov",
   "--cov-report=term-missing",
]